// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Popup component at small screen size should render properly when it is closed 1`] = `
.c0 {
  background: #ffffff;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  min-height: 200px;
  box-shadow: 0 0.4rem 3.2 rgba(67,84,101,0.5);
  box-sizing: border-box;
  border-top-left-radius: 1.6rem;
  border-top-right-radius: 1.6rem;
}

@media (max-width:767px) {
  .c0 {
    width: 100%;
    height: calc(100% - 2.4rem);
    -webkit-animation: buZueW 0.4s cubic-bezier(0,0,0.33,1);
    animation: buZueW 0.4s cubic-bezier(0,0,0.33,1);
  }
}

@media (min-width:768px) and (max-width:1439px) {
  .c0 {
    padding: 4.8rem 3.2rem;
    border-radius: 1.2rem;
    max-width: 72%;
    min-width: 200px;
    max-height: 80%;
  }
}

@media (min-width:1440px) {
  .c0 {
    padding: 4.8rem 3.2rem;
    border-radius: 1.2rem;
    min-width: 200px;
    max-width: 103.6rem;
    max-height: 80%;
  }
}

@media (min-width:768px) {
  .c0 {
    -webkit-animation: dfPvjS 0.2s cubic-bezier(0,0,0.33,1);
    animation: dfPvjS 0.2s cubic-bezier(0,0,0.33,1);
  }
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Modal Popup component at small screen size should render properly when it is open 1`] = `
.c0 {
  background: #ffffff;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  min-height: 200px;
  box-shadow: 0 0.4rem 3.2 rgba(67,84,101,0.5);
  box-sizing: border-box;
  border-top-left-radius: 1.6rem;
  border-top-right-radius: 1.6rem;
}

@media (max-width:767px) {
  .c0 {
    width: 100%;
    height: calc(100% - 2.4rem);
    -webkit-animation: cQwfQi 0.4s cubic-bezier(0,0,0.33,1);
    animation: cQwfQi 0.4s cubic-bezier(0,0,0.33,1);
  }
}

@media (min-width:768px) and (max-width:1439px) {
  .c0 {
    padding: 4.8rem 3.2rem;
    border-radius: 1.2rem;
    max-width: 72%;
    min-width: 200px;
    max-height: 80%;
  }
}

@media (min-width:1440px) {
  .c0 {
    padding: 4.8rem 3.2rem;
    border-radius: 1.2rem;
    min-width: 200px;
    max-width: 103.6rem;
    max-height: 80%;
  }
}

@media (min-width:768px) {
  .c0 {
    -webkit-animation: hvOvm 0.2s cubic-bezier(0,0,0.33,1);
    animation: hvOvm 0.2s cubic-bezier(0,0,0.33,1);
  }
}

<div>
  <div
    class="c0"
    open=""
  />
</div>
`;
